package proto_msg;

message KamajiMessage {
	enum ACTION {
		STATUS_UPDATE = 1;
		ASSIGN = 2;
		QUERY = 3;
	}
	enum ENTITY {
		NODE 	= 11;
		JOB 	= 12;
		TASK    = 13;
		COMMAND = 14;
	}
  required ACTION action = 1 [default=STATUS_UPDATE];
  required ENTITY entity = 2 [default=NODE];
  optional string id = 3;
  repeated NodeItem messageitems = 4;
  repeated JobItem jobitems = 5;
  repeated TaskItem taskitems = 6;
  repeated CommandItem commanditems = 7;
  optional group StatusUpdate = 8 {
  	required int32 destination = 9;
  	optional string name = 10;
  }

  optional group NodeStats = 11 {
    required string hostname = 12;
  }
  optional group CommandLog = 13 {
    required string logline = 14;
  }
  optional group Command = 15 {
  	required string ID = 16;
  }
  message NodeItem {
    required string id = 17;
    optional int32 state = 18;
  }
  message JobItem {
    required string name = 19;
    required string id = 20;
    optional int32 state = 21;
  }
  message TaskItem {
    required string name = 22;
    required string id = 23;
    optional int32 state = 24;
  }
  message CommandItem {
    required string name = 25;
    required string id = 26;
    optional int32 state = 27;
  }
}